--- a/app_src/settings.json
+++ b/app_src/settings.json
@@ -1,12 +1,9 @@
 {
-    "selected_profile": "1.8.5 - General (ALT8)",
     "game_filter": false,
     "ipset_selection": "ipset-one.txt",
-    "selected_lists": {
-        "discord": true,
-        "list-general": true,
-        "youtube": true
-    },
-    "use_custom_list": true,
-    "custom_list_path": "C:/Users/user/Desktop/list-custom.txt"
+    "list_profile_map": {
+        "discord.txt": "1.8.5 - General (ALT8)",
+        "list-general.txt": "1.8.5 - General (ALT7)",
+        "youtube.txt": "1.8.5 - General (ALT7)"
+    }
 }
