--- a/app_src/settings.json
+++ b/app_src/settings.json
@@ -1,9 +1,13 @@
 {
     "game_filter": false,
-    "ipset_selection": "ipset-one.txt",
     "list_profile_map": {
         "discord.txt": "1.8.5 - General (ALT8)",
         "list-general.txt": "1.8.5 - General (ALT7)",
         "youtube.txt": "1.8.5 - General (ALT7)"
+    },
+    "list_ipset_map": {
+        "discord.txt": "ipset-one.txt",
+        "list-general.txt": "ipset-one.txt",
+        "youtube.txt": "ipset-one.txt"
     }
 }
