--- a/app_src/settings.json
+++ b/app_src/settings.json
@@ -3,11 +3,13 @@
     "list_profile_map": {
         "discord.txt": "1.8.5 - General (ALT8)",
         "list-general.txt": "1.8.5 - General (ALT7)",
-        "youtube.txt": "1.8.5 - General (ALT7)"
+        "youtube.txt": "1.8.5 - General (ALT7)",
+        "telegram.txt": "1.8.5 - General (ALT7)"
     },
     "list_ipset_map": {
         "discord.txt": "ipset-one.txt",
         "list-general.txt": "ipset-one.txt",
-        "youtube.txt": "ipset-one.txt"
+        "youtube.txt": "ipset-one.txt",
+        "telegram.txt": "ipset-Telegram.txt"
     }
 }
