--- a/app_src/settings.json
+++ b/app_src/settings.json
@@ -5,14 +5,16 @@
         "list-general.txt": "1.8.5 - General (ALT7)",
         "youtube.txt": "1.8.5 - General (ALT7)",
         "telegram.txt": "1.8.5 - General (ALT7)",
-        "[CUSTOM] list-custom.txt": "1.8.5 - General (ALT7)"
+        "[CUSTOM] list-custom.txt": "1.8.5 - General (ALT7)",
+        "twitter.txt": "1.8.5 - General (ALT7)"
     },
     "list_ipset_map": {
         "discord.txt": "ipset-one.txt",
         "list-general.txt": "ipset-one.txt",
         "youtube.txt": "ipset-one.txt",
         "telegram.txt": "ipset-Telegram.txt",
-        "[CUSTOM] list-custom.txt": "ipset-one.txt"
+        "[CUSTOM] list-custom.txt": "ipset-one.txt",
+        "twitter.txt": "ipset-one.txt"
     },
     "custom_list_path": "C:/Users/user/Desktop/list-custom.txt"
 }
