Добавлена функция скачивания файла хост для обхода телеги.

--- a/app_src/settings.json
+++ b/app_src/settings.json
@@ -4,7 +4,7 @@
         "discord.txt": "1.9.1 - General (ALT10)",
         "list-general.txt": "1.9.1 - General (ALT10)",
         "youtube.txt": "1.9.1 - YouTube (Special)",
-        "telegram.txt": "\u041e\u0422\u041a\u041b\u042e\u0427\u0415\u041d\u041e",
+        "telegram.txt": "1.9.1 - General (ALT10)",
         "[CUSTOM] list-custom.txt": "1.9.1 - General (ALT10)",
         "twitter.txt": "\u041e\u0422\u041a\u041b\u042e\u0427\u0415\u041d\u041e",
         "list-google.txt": "1.9.1 - YouTube (Special)"
